--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <!-- start Logo -->
                 <div class="col-md-6">
                     <div class="logo">
-                        <h2>Plcto</h2>
+                        <h2>Tempelat Email</h2>
                     </div>
                 </div>
                 <!-- end logo -->
@@ -270,14 +270,14 @@
         <!-- end article -->
         
         <footer class="text-center">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="www.twitter.com/issaalhadithi"><i class="fa fa-twitter "></i></a>
+            <a href="www.facebook.com/issaalhadithi"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-feed"></i></a>
+            <a href="www.instagram.com/issaalhadithi"><i class="fa fa-instagram"></i></a>
+            <a href="https://plus.google.com/u/0/109765696952034101482"><i class="fa fa-google-plus"></i></a>
+            <a href="www.linkedin.com/in/issaalhadithi"><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-pinterest "></i></a>
+            <a href="https://github.com/isaalzien"><i class="fa fa-github"></i></a>
             
             <p class="Copyright">Copyright 2017 <a href="proiq.ml">proiq.ml</a>. All Rights Reserved.</p>
             <p class="view">View Online  |  Unsubscribe</p>
